--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,10 @@
 		<meta name="description" content="Web site created using create-react-app" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Staatliches&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Murecho:wght@400;500;600&display=swap"
 			rel="stylesheet"
 		/>
 		<title>Playbox</title>
