--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,9 +10,14 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Murecho:wght@400;500;600&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Murecho:wght@400;500;600&family=Staatliches&display=swap"
 			rel="stylesheet"
 		/>
+		<style>
+			* {
+				overflow-x: hidden;
+			}
+		</style>
 		<title>Playbox</title>
 	</head>
 	<body>
